Bug 93825 - Missing accessibility events when selecting/deselecting cells in Calc
Summary: Missing accessibility events when selecting/deselecting cells in Calc
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other Linux (All)
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:5.3.0 target:5.2.4
Keywords:
Depends on:
Blocks: a11y-Linux
  Show dependency treegraph
 
Reported: 2015-08-31 21:44 UTC by Joanmarie Diggs
Modified: 2018-08-03 13:37 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
pyatspi accessible-event listener (393 bytes, text/x-python)
2015-08-31 21:44 UTC, Joanmarie Diggs
Details
Corrected pyatspi accessible-event listener (355 bytes, text/x-python)
2015-08-31 22:41 UTC, Joanmarie Diggs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Joanmarie Diggs 2015-08-31 21:44:37 UTC
Created attachment 118300 [details]
pyatspi accessible-event listener

Steps to reproduce:
1. Launch the attached accessible-event listener in a terminal
2. Launch Calc
3. Arrow around (as a sanity check, to see events)
4. Try one or more of the following:
   a. Shift + arrow around to select cells
   b. Press F8 to enter selection mode and arrow around to select cells
   c. Press Shift+Space to select the current row
   d. Press Ctrl+Shift+Space to select the current column

Expected results: For 4a, 4b, 4c, and 4d there would be an accessible event (such as object:state-changed:selected and/or object:selection-changed) to notify ATs like Orca that the selection has changed.

Actual results: For 4a, 4b, 4c, and 4d there are no selection-related accessible events.

Impact: Orca cannot present selection changes in Calc because Orca doesn't know they have occurred.

Note: You should see object:active-descendant-changed when you arrow around without selecting in step 3. I'm leaning towards object:active-descendant-changed NOT being the event emitted when selecting because the active cell seems to remain the one with the bold, black rectangle around it. That said, we're not seeing that event either. If that event were emitted when the selection changed it would be better than the nothing we are currently getting; but if I get a choice for the to-be-implemented event, I'd like a selection-related one. :)

Lastly, I can reproduce this in both 4.4.5.2 and 5.0.0.5. (I don't think the bug was introduced in 4.4.5.2, however.)
Comment 1 Joanmarie Diggs 2015-08-31 22:41:25 UTC
Created attachment 118302 [details]
Corrected pyatspi accessible-event listener

The previous listener has a silly error in it. Sorry!
Comment 2 Alex ARNAUD 2016-05-03 12:36:38 UTC
Dear all,
I can confirm with Calc version 5.1.2.

Best regards.
Comment 3 Commit Notification 2016-11-03 17:40:30 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2a818a0aafac218ca09bb079d7f2cf0879385e4a

tdf#93825: Missing accessibility events when selecting/deselecting cells

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2016-11-03 21:24:54 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1e98bd4b6f65f7e098879852dd9d9e41c224b83e&h=libreoffice-5-2

tdf#93825: Missing accessibility events when selecting/deselecting cells

It will be available in 5.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Alex ARNAUD 2017-07-13 12:44:07 UTC
Hello all,

I can't confirm the fix with LibreOffice 6.0 and Orca 3.24.

Could someone can confirm the resolution ? If not, I'll reopen this bug.

Best regards.
Comment 6 Tamás Zolnai 2017-07-13 14:07:32 UTC
(In reply to Alex ARNAUD from comment #5)
> Hello all,
> 
> I can't confirm the fix with LibreOffice 6.0 and Orca 3.24.
> 
> Could someone can confirm the resolution ? If not, I'll reopen this bug.
> 
> Best regards.

I checked with the attached python script and the selection-changed event are there (I checked 4a use case). Can you please check with the script, whether events are fired? Orca might not handle all the events.
Comment 7 Alex ARNAUD 2017-07-13 14:22:58 UTC
(In reply to Tamás Zolnai from comment #6)
> (In reply to Alex ARNAUD from comment #5)
> > Hello all,
> > 
> > I can't confirm the fix with LibreOffice 6.0 and Orca 3.24.
> > 
> > Could someone can confirm the resolution ? If not, I'll reopen this bug.
> > 
> > Best regards.
> 
> I checked with the attached python script and the selection-changed event
> are there (I checked 4a use case). Can you please check with the script,
> whether events are fired? Orca might not handle all the events.

OK, you're completely right. Thanks for the fix.

Best regards.