tdf#93825: Missing accessibility events when selecting/deselecting cells

Change-Id: I407f585354e78fb47a76561455ac67bb567c2771