vcl/unx/gtk/a11y/atklistener.cxx
@@ -563,6 +563,9 @@ void AtkListener::notifyEvent( const accessibility::AccessibleEventObject& aEven
             break;
 
         case accessibility::AccessibleEventId::SELECTION_CHANGED:
+        case accessibility::AccessibleEventId::SELECTION_CHANGED_ADD:
+        case accessibility::AccessibleEventId::SELECTION_CHANGED_REMOVE:
+        case accessibility::AccessibleEventId::SELECTION_CHANGED_WITHIN:
             g_signal_emit_by_name( G_OBJECT( atk_obj ), "selection_changed");
             break;
 
@@ -588,10 +591,6 @@ void AtkListener::notifyEvent( const accessibility::AccessibleEventObject& aEven
             */
             break;
         }
-
-        case accessibility::AccessibleEventId::SELECTION_CHANGED_REMOVE:
-            /* unknown what to do with this */
-            break;
 
         default:
             SAL_WARN("vcl.gtk", "Unknown event notification: " << aEvent.EventId);
